# ratatui-flip-panel

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: album_view.rs  basic.rs  code_preview.rs  flashcard.rs  playing_card.rs
src/: lib.rs
tapes/: album_view.tape  basic.tape  code_preview.tape  flashcard.tape  playing_card.tape
